tests/__snapshots__/api-toBeAny-stderr.snap.txt
Error: The source type is 'string'.

   7 |   expect(returnsAny()).type.toBeAny();
   8 | 
   9 |   expect(returnsString()).type.toBeAny();
     |                                ~~~~~~~
  10 | });
  11 | 
  12 | test("is NOT any?", () => {

       at ./__typetests__/toBeAny.tst.ts:9:32 ❭ is any?

Error: The source type is 'any'.

  13 |   expect(returnsString()).type.not.toBeAny();
  14 | 
  15 |   expect(returnsAny()).type.not.toBeAny();
     |                                 ~~~~~~~
  16 | });
  17 | 

       at ./__typetests__/toBeAny.tst.ts:15:33 ❭ is NOT any?

